# unilabellm

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml
api/: main.py  schemas.py
api/routes/: export.py  filesystem.py  inference.py  sessions.py  sources.py  validation.py  workspace.py
cli/: main.py
cli/commands/: export.py  session.py  source.py
core/: config.py  models.py
core/exporter/: yolo.py
core/harmonizer/: mapper.py  session.py  validator.py
core/llm/: analyzer.py  prompts.py
core/merger/: dedup.py  merger.py
core/multimodal/: __init__.py  base.py  clip_scorer.py  owl_scorer.py  siglip_scorer.py
core/parser/: yolo.py
core/sources/: __init__.py  base.py  kaggle.py  manager.py  roboflow.py  url.py
tests/: conftest.py  test_analyzer.py  test_harmonizer.py  test_parser.py  test_sources.py
training/: Tank Training Notebook.ipynb  auto_labeling.ipynb  sam3_autolabel.ipynb  sam3_bbox_refine.ipynb  sam3_gemma4_autolabel.ipynb  unilabellm_training.ipynb
ui/: index.html  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/api/: client.ts
ui/src/components/: AddSourcePanel.tsx  AliasChip.tsx  CanonicalClassCard.tsx  DatasetStats.tsx  ExportPanel.tsx  FolderBrowser.tsx  HarmonizationView.tsx  HudOverlay.tsx  InferencePanel.tsx  LabelEditor.tsx  NewSessionForm.tsx  PathInput.tsx  SampleViewer.tsx  SessionList.tsx  ValidationPanel.tsx
ui/src/store/: sessionStore.ts
